--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-hot-middleware": "^2.21.0"
+  },
+  "dependencies": {
+    "normalize.css": "^7.0.0"
   }
 }
