--- a/LCARS.csproj
+++ b/LCARS.csproj
@@ -15,15 +15,12 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
     <None Remove="file.ts" />
+    <Content Include="ClientApp\images\tl.png" />
     <TypeScriptCompile Include="file.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="wwwroot\images\United_Federation_of_Planets_002_by_Scharfshutze.jpg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ClientApp\images\" />
   </ItemGroup>
 
   <Target Name="CustomCollectFiles">
