--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "url-loader": "^0.6.2"
   }
 }
