Beginning work on database.

--- a/LCARS.csproj
+++ b/LCARS.csproj
@@ -12,8 +12,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.1" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="file.ts" />
     <Content Include="ClientApp\images\tl.png" />
     <TypeScriptCompile Include="file.ts" />
@@ -21,6 +30,10 @@
 
   <ItemGroup>
     <None Include="wwwroot\images\United_Federation_of_Planets_002_by_Scharfshutze.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
 
   <Target Name="CustomCollectFiles">
