--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.7.2",
+    "normalize.css": "^8.0.0",
     "popper.js": "^1.12.9",
     "postcss-loader": "^2.1.0",
     "precss": "^3.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.8",
+    "url-loader": "^0.6.2",
     "vue": "^2.5.13",
     "vue-loader": "^14.1.1",
     "vue-router": "^3.0.1",
@@ -44,8 +46,5 @@
     "webpack": "^3.10.0",
     "webpack-hot-middleware": "^2.21.0"
   },
-  "dependencies": {
-    "normalize.css": "^7.0.0",
-    "url-loader": "^0.6.2"
-  }
+  "dependencies": {}
 }
