--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue": "^2.5.13",
     "vue-loader": "^14.1.1",
     "vue-router": "^3.0.1",
+    "vue-save-state": "^1.2.0",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-hot-middleware": "^2.21.0"
